Add review functionality with CRUD operations and notifications for seat requests